testdata/accept/framebuffer02.lc
main = ScreenOut (FrameBuffer (ColorImage @1 (V4 0.0 0.0 0.4 1.0)
                              ,ColorImage @1 (V4 1.0 1.0 1.0 1.0)
                              ,ColorImage @1 1.0
                              )
                 )

