testdata/reject/later/framebuffer02.lc
main =
    let frame = FrameBuffer (colorImage1 (V4 0.0 0.0 0.4 1.0)
                            ,ColorImage @2 (V4 1.0 1.0 1.0 1.0)
                            ,colorImage1 1.0
                            )
    in ScreenOut frame
